--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -6,13 +6,11 @@
 <vr-textbox type="search" placeholder="Custom Place Holder" value="Input"></vr-textbox>
 <vr-textbox type="mail" value="Input"></vr-textbox>
 
-<vr-textbox type="Button" value="Input" buttontext="Alert" btn-click="alertMsg()"></vr-textbox>
+<vr-textbox type="button" value="Input" buttontext="Alert" btn-click="alertMsg()"></vr-textbox>
 <br />
 
 <vr-gridview gridoptions="gridOptions" column-defs="name,age">
 </vr-gridview>
 
-<vr-gridview type="V1" gridoptions="gridOptionsV1">
-</vr-gridview>
 
 {{Input}}
