--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-gridview-standard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-gridview-standard.html
@@ -3,7 +3,8 @@
         <th ng-repeat="n in gridoptions.header">{{n}}</th>
     </thead>
     <tbody>
-        <tr id="trbody" ng-repeat="n in gridoptions.data">
-        </tr>
+
+        <tr id="trbody" ng-repeat="item in gridoptions.data"></tr>
+
     </tbody>
 </table>
