--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -10,7 +10,11 @@
 <br />
 {{testviewCtrl.Input}}
 <br />
-<vr-gridview gridoptions="testviewCtrl.gridOptions" column-defs="name,age">
+
+
+
+<vr-gridview gridoptions="testviewCtrl.gridOptions" columndefs="name,age">
+
 </vr-gridview>
 
 
