--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditorOld.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditorOld.html
@@ -102,7 +102,7 @@
         </div>
         <div class="row" style="min-height:300px">
             <div class="three wide column">
-                
+                <input data-format="dd/MM/yyyy hh:mm:ss" type="date" />
 
             </div>
 
