--- a/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
+++ b/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
@@ -7,8 +7,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>@ViewBag.Title</title>
-    @*@Styles.Render("~/Content/bootstrap")*@
-    @Styles.Render("~/Content/Semantic")
+    @Styles.Render("~/Content/bootstrap")
+    @*@Styles.Render("~/Content/Semantic")*@
     @Styles.Render("~/Content/Styles")
 
     
@@ -24,13 +24,13 @@
     <a href="#/FusionChart">Fusion Chart</a> |
     <a href="#/CanvasJSChart">CanvasJS Chart</a> |
     <a href="#/AMChart">AM Chart</a>
-    <div ng-view></div>
+    <div class="col-md-12" ng-view></div>
 </body>
 
 @Scripts.Render("~/bundles/JQuery")
 @Scripts.Render("~/bundles/Angular")
-@*@Scripts.Render("~/bundles/bootstrap")*@
-@Scripts.Render("~/bundles/Semantic")
+@Scripts.Render("~/bundles/bootstrap")
+@*@Scripts.Render("~/bundles/Semantic")*@
 @Scripts.Render("~/bundles/Javascripts")
 </html>
 
