--- a/TOneV2/Code/TOneV2/TOne.LCRProcess/RoutingProcess.xaml
+++ b/TOneV2/Code/TOneV2/TOne.LCRProcess/RoutingProcess.xaml
@@ -216,47 +216,47 @@
             <ActivityAction.Argument>
               <DelegateInArgument x:TypeArguments="x:String" Name="codePrefix" />
             </ActivityAction.Argument>
-            <local:BuildRoutes sap2010:ExpressionActivityEditor.ExpressionActivityEditor="C#" sap2010:WorkflowViewState.IdRef="TOne.LCRProcess.BuildRoutes_1">
-              <local:BuildRoutes.ActiveSuppliers>
+            <local:BuildLCRandRoutes sap2010:ExpressionActivityEditor.ExpressionActivityEditor="C#" sap2010:WorkflowViewState.IdRef="TOne.LCRProcess.BuildLCRandRoutes_1">
+              <local:BuildLCRandRoutes.ActiveSuppliers>
                 <InArgument x:TypeArguments="scg:List(tbe:CarrierAccountInfo)">
                   <mca:CSharpValue x:TypeArguments="scg:List(tbe:CarrierAccountInfo)">activeSuppliers</mca:CSharpValue>
                 </InArgument>
-              </local:BuildRoutes.ActiveSuppliers>
-              <local:BuildRoutes.CodeMatchesQueue>
+              </local:BuildLCRandRoutes.ActiveSuppliers>
+              <local:BuildLCRandRoutes.CodeMatchesQueue>
                 <InArgument x:TypeArguments="vq:BaseQueue(scg:List(tle:CodeMatch))">
                   <mca:CSharpValue x:TypeArguments="vq:BaseQueue(scg:List(tle:CodeMatch))">queueCodeMatches</mca:CSharpValue>
                 </InArgument>
-              </local:BuildRoutes.CodeMatchesQueue>
-              <local:BuildRoutes.CodePrefixGroup>
+              </local:BuildLCRandRoutes.CodeMatchesQueue>
+              <local:BuildLCRandRoutes.CodePrefixGroup>
                 <InArgument x:TypeArguments="x:String">
                   <mca:CSharpValue x:TypeArguments="x:String">codePrefix</mca:CSharpValue>
                 </InArgument>
-              </local:BuildRoutes.CodePrefixGroup>
-              <local:BuildRoutes.EffectiveTime>
+              </local:BuildLCRandRoutes.CodePrefixGroup>
+              <local:BuildLCRandRoutes.EffectiveTime>
                 <InArgument x:TypeArguments="s:DateTime">
                   <mca:CSharpValue x:TypeArguments="s:DateTime">Input.EffectiveTime</mca:CSharpValue>
                 </InArgument>
-              </local:BuildRoutes.EffectiveTime>
-              <local:BuildRoutes.IsFuture>
+              </local:BuildLCRandRoutes.EffectiveTime>
+              <local:BuildLCRandRoutes.IsFuture>
                 <InArgument x:TypeArguments="x:Boolean">
                   <mca:CSharpValue x:TypeArguments="x:Boolean">Input.IsFuture</mca:CSharpValue>
                 </InArgument>
-              </local:BuildRoutes.IsFuture>
-              <local:BuildRoutes.RoutingDataBaseId>
+              </local:BuildLCRandRoutes.IsFuture>
+              <local:BuildLCRandRoutes.RoutingDataBaseId>
                 <InArgument x:TypeArguments="x:Int32">
                   <mca:CSharpValue x:TypeArguments="x:Int32">routingDatabaseId</mca:CSharpValue>
                 </InArgument>
-              </local:BuildRoutes.RoutingDataBaseId>
+              </local:BuildLCRandRoutes.RoutingDataBaseId>
               <sap2010:WorkflowViewState.ViewStateManager>
                 <sap2010:ViewStateManager>
                   <sap2010:ViewStateData Id="GetCodes_2" sap2010:WorkflowViewState.IdRef="ViewStateData_15" />
                   <sap2010:ViewStateData Id="BuildCodeMatchByCodeGroup_1" sap2010:WorkflowViewState.IdRef="ViewStateData_16" />
                   <sap2010:ViewStateData Id="Parallel_1" sap2010:WorkflowViewState.IdRef="ViewStateData_17" />
                   <sap2010:ViewStateData Id="Sequence_1" sap2010:WorkflowViewState.IdRef="ViewStateData_18" />
-                  <sap2010:ViewStateData Id="TOne.LCRProcess.BuildRoutes_1" sap2010:WorkflowViewState.IdRef="ViewStateData_19" />
+                  <sap2010:ViewStateData Id="TOne.LCRProcess.BuildLCRandRoutes_1" sap2010:WorkflowViewState.IdRef="ViewStateData_19" />
                 </sap2010:ViewStateManager>
               </sap2010:WorkflowViewState.ViewStateManager>
-            </local:BuildRoutes>
+            </local:BuildLCRandRoutes>
           </ActivityAction>
         </vbw:ParallelForEach>
         <Assign sap2010:WorkflowViewState.IdRef="Assign_1">
@@ -414,7 +414,7 @@
         </sap:WorkflowViewStateService.ViewState>
       </sap2010:ViewStateData>
       <sap2010:ViewStateData Id="ViewStateData_19" sap:VirtualizedContainerService.HintSize="376,352" />
-      <sap2010:ViewStateData Id="TOne.LCRProcess.BuildRoutes_1" sap:VirtualizedContainerService.HintSize="200,22" />
+      <sap2010:ViewStateData Id="TOne.LCRProcess.BuildLCRandRoutes_1" sap:VirtualizedContainerService.HintSize="200,22" />
       <sap2010:ViewStateData Id="ParallelForEach`1_3" sap:VirtualizedContainerService.HintSize="287,210" />
       <sap2010:ViewStateData Id="Assign_1" sap:VirtualizedContainerService.HintSize="287,62" />
       <sap2010:ViewStateData Id="Sequence_3" sap:VirtualizedContainerService.HintSize="309,436">
