--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/PriorityTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/PriorityTemplate.html
@@ -2,7 +2,7 @@
     <div class="col-lg-2 style-col">
         <div class="dropdown">
             <button class="btn btn-default dropdown-toggle" style="width:100%" type="button" id="dropdownMenuS" data-toggle="dropdown" aria-expanded="true">
-                <label style="float:left;margin:0px"> {{getSelectSuppliersText()}}</label>
+                <span style="float:left;margin:0px"> {{getSelectSuppliersText()}}</span>
                 <span style="float:right;position:relative;top:10px" class="caret"></span>
             </button>
             <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenuS" ng-class="single-col-checklist">
@@ -26,17 +26,17 @@
             </ul>
         </div>
     </div>
-    <div class="col-lg-4  style-col " ng-class="selectedSuppliers.length == 0 ? 'emptycol':''">  
-
-        <ul class="list-group dragbelzone" ng-sortable="itemsSortable" ng-show="selectedSuppliers.length > 0">
-            <li  class="list-group-item list-custom" style="margin:1px;border:0px">                
-                <div style="display:inline-block;padding-left:20px">Supplier</div>                
-               
+    <div class="col-lg-4  style-col " ng-class="selectedSuppliers.length == 0 ? 'emptycol':''">
+        <ul class="list-group" style="margin:0px" ng-show="selectedSuppliers.length > 0">
+            <li class="list-group-item list-custom" style="margin:1px;border:0px">
+                <div style="display:inline-block;padding-left:25px">Supplier</div>
                 <div style="float: right;">
-                    <span >Status</span>
+                    <span>Status</span>
                     <span style="padding-right:50px">%</span>
                 </div>
             </li>
+        </ul>
+        <ul class="list-group dragbelzone" ng-sortable="itemsSortable" ng-show="selectedSuppliers.length > 0">           
             <li ng-repeat="item in selectedSuppliers" class="list-group-item list-custom" style="margin:1px">
                 <i class="glyphicon glyphicon-th-list handeldrag"></i>
                 {{item.Name}}
