--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/RouteOverrideTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/RouteOverrideTemplate.html
@@ -1,8 +1,8 @@
-﻿<div  ng-controller="RouteOverrideController">
+﻿<div ng-controller="RouteOverrideController">
     <div class="col-lg-2 style-col">
         <div class="dropdown">
             <button class="btn btn-default dropdown-toggle" style="width:100%" type="button" id="dropdownMenuS" data-toggle="dropdown" aria-expanded="true">
-                <label style="float:left;margin:0px"> {{getSelectSuppliersText()}}</label>
+                <span style="float:left;margin:0px"> {{getSelectSuppliersText()}}</span>
                 <span style="float:right;position:relative;top:10px" class="caret"></span>
             </button>
             <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenuS" ng-class="single-col-checklist">
@@ -27,16 +27,17 @@
         </div>
     </div>
     <div class="col-lg-3  style-col " ng-class="selectedSuppliers.length == 0 ? 'emptycol':''">
-      
-        <ul class="list-group dragbelzone" ng-sortable="itemsSortable" ng-show="selectedSuppliers.length > 0">
+        <ul class="list-group" style="margin:0px" ng-show="selectedSuppliers.length > 0">
             <li class="list-group-item list-custom" style="margin:1px;border:0px">
-                <div style="display:inline-block;padding-left:20px">Supplier</div>
+                <div style="display:inline-block;padding-left:25px">Supplier</div>
                 <div style="float: right;">
                     <span style="padding-right:50px">%</span>
                 </div>
             </li>
+        </ul>
+        <ul class="list-group dragbelzone" ng-sortable="itemsSortable" ng-show="selectedSuppliers.length > 0">
             <li ng-repeat="item in selectedSuppliers" class="list-group-item list-custom" style="margin:1px">
-                <i class="glyphicon glyphicon-th-list handeldrag"></i>                
+                <i class="glyphicon glyphicon-th-list handeldrag"></i>
                 <div style="display:inline-block;max-width:200px;">{{item.Name}}</div>
                 <i class="glyphicon glyphicon-remove hand-cursor" style="float: right; padding: 5px; cursor:default" ng-click="selectSupplier($event,item)"></i>
                 <div style="float: right">
