--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-textbox-button.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-textbox-button.html
@@ -1,4 +1,6 @@
-﻿<div class="ui action input">
-    <input type="text" placeholder="{{ctrl.placeholder}}" ng-model="ctrl.value">
-    <button class="ui button" ng-click="ctrl.btnClick()">{{ctrl.buttontext}}</button>
+﻿<div class="input-group">
+    <input type="text" class="form-control" placeholder="{{ctrl.placeholder}}" ng-model="ctrl.value">
+    <span class="input-group-btn">
+        <button class="btn btn-default" type="button" ng-click="ctrl.btnClick()">{{ctrl.buttontext}}</button>
+    </span>
 </div>
