--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Views/vr-gridview-v1.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Views/vr-gridview-v1.html
@@ -1,10 +1,2 @@
-﻿<table class="ui table">
-    <thead>
-    <th>Name</th>
-    </thead>
-    <tbody>
-        <tr id="trbody" ng-repeat="n in gridoptions.data">
-            <td>{{n.name}}</td>
-        </tr>
-    </tbody>
-</table>
+﻿<strong>{{ item.name }} , {{ item.age }}</strong>
+
