--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-textbox-icon.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-textbox-icon.html
@@ -1,4 +1,4 @@
-﻿<div class="ui icon input">
-    <input type="text" placeholder="{{ ctrl.placeholder}}" ng-model="ctrl.value">
-    <i class="{{ctrl.icon}} icon"></i>
+﻿<div class="form-group">
+    <label>{{ctrl.label}}</label>
+    <input type="text" class="form-control" placeholder="{{ctrl.placeholder}}" ng-model="ctrl.value">
 </div>
