--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-textbox-standard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-textbox-standard.html
@@ -1,3 +1,4 @@
-﻿<div class="ui input">
-    <input type="text" placeholder="{{ ctrl.placeholder}}" ng-model="ctrl.value">
+﻿<div class="form-group">
+    <label>{{ctrl.label}}</label>
+    <input type="text" class="form-control" placeholder="{{ctrl.placeholder}}" ng-model="ctrl.value" >
 </div>
