Add notification feature.
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21512

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/CodeTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/CodeTemplate.html
@@ -26,8 +26,8 @@
                     <div style="display: inline-block; width: 220px;">
                         <div style="padding-bottom: 5px; border-bottom: 1px solid #f0f0f0; margin: 5px; ">
                             <div class="inner-addon right-addon form-inline">
-                                <input type="text" class="form-control input-sm" style="width:150px" ng-model="codeInpute" ng-keyup="addCodeEnter($event)" />
-                                <button class="btn btn-default" ng-click="addCode($event)">Add</button>
+                                <input type="text" class="form-control input-sm inline-inpute" ng-model="codeInpute" ng-keyup="addCodeEnter($event)" />
+                                <button class="btn btn-default" style="display:inline-block" ng-click="addCode($event)">Add</button>
                             </div>
                         </div>
                         <div style="padding:5px ;">
