--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/PriorityTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/PriorityTemplate.html
@@ -31,7 +31,7 @@
             <li class="list-group-item list-custom" style="margin:1px;border:0px">
                 <div style="display:inline-block;padding-left:25px">Supplier</div>
                 <div style="float: right;">
-                    <span>Status</span>
+                    <span>Force</span>
                     <span style="padding-right:50px">%</span>
                 </div>
             </li>
@@ -43,8 +43,8 @@
                 <i class="glyphicon glyphicon-remove hand-cursor" style="float: right; padding: 5px; cursor:default" ng-click="selectSupplier($event,item)"></i>
 
                 <div style="float: right">
-                    <switch ng-model="item.enabled" class="green"></switch>
-                    <input type="text" class="form-control list-inpute list-inpute-float" size="3">
+                    <switch ng-model="item.Force" ng-init="item.Force = false " class="green"></switch>
+                    <input type="text" class="form-control list-inpute list-inpute-float" ng-model="item.Percentage" size="3">
                 </div>
             </li>
         </ul>
