--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/RouteOverrideTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/RouteOverrideTemplate.html
@@ -41,7 +41,7 @@
                 <div style="display:inline-block;max-width:200px;">{{item.Name}}</div>
                 <i class="glyphicon glyphicon-remove hand-cursor" style="float: right; padding: 5px; cursor:default" ng-click="selectSupplier($event,item)"></i>
                 <div style="float: right">
-                    <input type="text" class="form-control list-inpute" style="" size="3">
+                    <input type="text" class="form-control list-inpute" ng-model="item.Percentage" style="" size="3">
                 </div>
             </li>
         </ul>
